# radar

./: .dockerignore  .gitignore  .gitmodules  .prospector.yaml  INSTALL.md  README.rst  api_definition.yaml  lint.sh  manage.py  pytest.ini  requirements-prod.txt  requirements.txt  run_loadsubmissions.sh  setup_for_linux.sh
.github/workflows/: Dockerfile  lint.Dockerfile  lint.yml  tests.yml
access/: decorators.py  urls.py  views.py
accounts/: admin.py  apps.py  models.py
accounts/migrations/: 0001_initial.py  0002_auto_20180309_0939.py  0003_alter_radaruser_first_name.py
aplus_client/: README.md  __init__.py  client.py  debugging.py  interfaces.py
aplus_client/django/: __init__.py  apps.py  models.py  views.py
cheatersheet/: urls.py  views.py
data/: admin.py  api_urls.py  api_views.py  aplus.py  files.py  graph.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
data/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20150128_1852.py  0002_auto_20150222_1829.py  0002_exercise_best_comparisons.py  0002_exercise_use_staff_submissions_student_is_staff.py  0002_submission_aplus_key.py  0002_submission_key.py  0003_auto_20150305_1117.py  0003_merge_20250729_1256.py  0003_update_tokenizer_choices.py  0004_exercise_paused.py  0004_providerqueue_failed.py  0005_auto_20151016_0502.py  0005_submission_provider_submission_time.py  0006_auto_20170224_0816.py  0006_auto_20180426_1418.py  (+41 more)
doc/: DEVELOPMENT.md  INSTALL.md  radar-nginx.conf  radar-web-uwsgi.service  uwsgi-radar.ini
docker/: .env  Dockerfile  README.md  build.sh  docker-compose.yaml  manual-services.md  run.sh
e2e_tests/: README.md  helpers.py  test_dolos.py  test_radar.py
extensions/greedy_string_tiling/: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
extensions/greedy_string_tiling/include/: data_generator.hpp  gst.hpp
extensions/greedy_string_tiling/src/: gst.cpp  gstmodule.cpp
extensions/greedy_string_tiling/tests/: test_benchmark.cpp  test_matcher.cpp
flower_proxy/: urls.py  views.py
integration/: aplus.py  filesystem.py
ltilogin/: __init__.py  admin.py  apps.py  auth_backend.py  lti_validator.py  models.py  receivers.py  views.py
matcher/: README.md  helper.py  jplag.py  jplag_ext.py  matcher.py  radar_drawio.xml  tasks.py  tests.py
provider/: aplus.py  filesystem.py  insert.py  tasks.py
radar/: celery.py  config.py  local_settings.example.py  settings.py  urls.py  wsgi.py
review/: decorators.py  forms.py  helpers.py  urls.py  views.py
static/: codeview.jquery.js  codeview.js  histogram.js  main.css  main.js
templates/: 404.html  500.html  base.html  login.html
tokenizer/: HTML_group_to_elements.json  HTML_token_map.json  README.md  _generate_token_map_json.py  c.py  cpp.py  css.py  executor.py  html.py  html_parser.py  java.py  javascript.py  matlab.py  python.py  scala.py  scala.py_old.txt  skip.py  text.py  tokenizer.py  util.py
tokens/: tokens.py
(+96 files in other folders)
